--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ result.csv filter=lfs diff=lfs merge=lfs -text
 run.sh filter=lfs diff=lfs merge=lfs -text
 CompactDroid.run filter=lfs diff=lfs merge=lfs -text
 dataset2 filter=lfs diff=lfs merge=lfs -text
+dataset2-2 filter=lfs diff=lfs merge=lfs -text
